Optimise static import